--- a/startopdracht/css/style.css
+++ b/startopdracht/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -8,8 +8,7 @@ body {
 }
 
 .hero {
-    background-color: #6DCCAA;
-    /* vh=viewpoint height */
+    background-color: #6dccaa;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -23,7 +22,7 @@ body {
 }
 
 .social-shit {
-    background-color: blue;
+    background-color: blueviolet;
 }
 
 .banaan {
@@ -39,6 +38,7 @@ body {
 
 nav {
     background-color: yellow;
+    /* margin-left: auto; */
 }
 
 .justify-content-space-between {
@@ -50,13 +50,46 @@ nav {
 }
 
 .three-columns>* {
-    flex: 1 1 calc(100/3);
+    flex: 1 1 calc(100% / 3);
 }
 
 .four-columns>* {
     flex: 1 1 25%;
 }
 
+section {
+    padding: 4rem 0;
+}
+
 .passie {
-    background-color: pink;
+    background-color: hotpink;
+}
+
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+}
+
+a.button,
+input[type="submit"] {
+    display: inline-block;
+    padding: 10px 16px;
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 13px;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    color: inherit;
+    background: transparent;
+    border: 2px solid #333;
+    transition: all 0.2s ease-out;
+}
+
+a.button:hover,
+input[type="submit"]:hover {
+    color: #fff;
+    background: #f7c040;
+    border-color: #f7c040;
 }
