--- a/startopdracht/css/style.css
+++ b/startopdracht/css/style.css
@@ -14,6 +14,16 @@ body {
     flex-direction: column;
 }
 
+header {
+    margin-top: 1rem;
+}
+
+header nav a {
+    padding: 20px 40px;
+    margin-right: 1rem;
+    display: inline-block;
+}
+
 .container {
     width: 80vw;
     max-width: 1200px;
@@ -92,4 +102,22 @@ input[type="submit"]:hover {
     color: #fff;
     background: #f7c040;
     border-color: #f7c040;
+}
+
+.video {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video iframe,
+.video object,
+.video embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
